force-app/main/default/objects/AppAdminAPI_Settings__c/AppAdminAPI_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AppAdminAPI Settings</label>
</CustomObject>