force-app/main/default/objects/AppAdminAPI_Settings__c/fields/isProduction__c.field-meta.xml
<CustomField>
    <fullName>isProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProduction</label>
    <type>Checkbox</type>
</CustomField>