force-app/main/default/objects/AppAdminAPI_Settings__c/fields/practiceNameLength__c.field-meta.xml
<CustomField>
    <fullName>practiceNameLength__c</fullName>
    <description>Allowable practice name length for AppAdmin</description>
    <label>practiceNameLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>