force-app/main/default/objects/AppAdminAPI_Settings__c/fields/productionContractUrl__c.field-meta.xml
<CustomField>
    <fullName>productionContractUrl__c</fullName>
    <description>Base URL for Contract Link</description>
    <label>productionContractUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>