force-app/main/default/objects/AppAdminAPI_Settings__c/fields/productionPassword__c.field-meta.xml
<CustomField>
    <fullName>productionPassword__c</fullName>
    <description>AppAdmin password for Production Server.</description>
    <label>productionPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>