force-app/main/default/objects/AppAdminAPI_Settings__c/fields/productionRequestUrl__c.field-meta.xml
<CustomField>
    <fullName>productionRequestUrl__c</fullName>
    <description>URL for GET from AppAdmin Production Server</description>
    <label>productionRequestUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>