force-app/main/default/objects/AppAdminAPI_Settings__c/fields/productionTargetUrl__c.field-meta.xml
<CustomField>
    <fullName>productionTargetUrl__c</fullName>
    <description>URL to POST to AppAdmin Production Server</description>
    <label>productionTargetUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>