force-app/main/default/objects/AppAdminAPI_Settings__c/fields/productionUsername__c.field-meta.xml
<CustomField>
    <fullName>productionUsername__c</fullName>
    <description>AppAdmin username for Production Server.</description>
    <label>productionUsername</label>
    <length>100</length>
    <type>Text</type>
</CustomField>