force-app/main/default/objects/AppAdminAPI_Settings__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>RequestType</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>