force-app/main/default/objects/AppAdminAPI_Settings__c/fields/sandboxContractUrl__c.field-meta.xml
<CustomField>
    <fullName>sandboxContractUrl__c</fullName>
    <description>Base URL for Contract link</description>
    <label>sandboxContractUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>