force-app/main/default/objects/AppAdminAPI_Settings__c/fields/sandboxPassword__c.field-meta.xml
<CustomField>
    <fullName>sandboxPassword__c</fullName>
    <description>AppAdmin password for Test Server</description>
    <label>sandboxPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>