force-app/main/default/objects/AppAdminAPI_Settings__c/fields/sandboxRequestUrl__c.field-meta.xml
<CustomField>
    <fullName>sandboxRequestUrl__c</fullName>
    <description>URL for GET from AppAdmin Test Server</description>
    <label>sandboxRequestUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>