force-app/main/default/objects/AppAdminAPI_Settings__c/fields/sandboxTargetUrl__c.field-meta.xml
<CustomField>
    <fullName>sandboxTargetUrl__c</fullName>
    <description>URL to POST to AppAdmin Test Server</description>
    <label>sandboxTargetUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>