force-app/main/default/objects/AppAdminAPI_Settings__c/fields/sandboxUsername__c.field-meta.xml
<CustomField>
    <fullName>sandboxUsername__c</fullName>
    <description>AppAdmin username for Test Server</description>
    <label>sandboxUsername</label>
    <length>100</length>
    <type>Text</type>
</CustomField>