force-app/main/default/objects/AppAdminAPI_Settings__c/fields/successStatusCode__c.field-meta.xml
<CustomField>
    <fullName>successStatusCode__c</fullName>
    <description>Status code returned by AppAdmin for success.</description>
    <label>successStatusCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>